fixed issue with comments and spacing

--- a/portfolio/src/main/webapp/style-map.css
+++ b/portfolio/src/main/webapp/style-map.css
@@ -7,5 +7,6 @@
 html, body {
   height: 100%;
   margin: 0;
+  max-height: 400px;
   padding: 0;
 }
